# Module-0

./: .pre-commit-config.yaml  README.md  environment.yml  installation.md  pyproject.toml
.github/workflows/: classroom.yml
project/: run_torch.py
