# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minitorch"
version = "0.5"
description = "A minimal deep learning library for educational purposes"
requires-python = ">=3.11,<3.12"
dependencies = [
    "colorama==0.4.6",
    "hypothesis==6.138.2",
    "numba==0.61.2",
    "llvmlite==0.44.0",
    "numpy==1.26.4",
    "pandas>=2.0",
    "pytest==8.4.1",
    "pytest-env==1.1.5",
    "pytest-runner==6.0.1",
    "typing_extensions",
    "jinja2==3.1.5",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.2.0",
    "flake8==7.1.1",
    "mypy==1.13.0",
    "ruff==0.8.4",
]
extra = [
    "datasets>=2.20.0",
    "embeddings==0.0.8",
    "plotly>=5.0",
    "pydot==1.4.1",
    "python-mnist",
    "streamlit==1.30.0",
    "streamlit-ace",
    "torch==2.2.0",          # pinned to match environment.yaml
    "watchdog==2.1.5",
    "altair==5.0.0",
    "networkx==3.3",
]

[tool.pyright]
include = ["**/minitorch"]
exclude = [
    "**/docs",
    "**/docs/module1/**",
    "**/assignments",
    "**/project",
    "**/mt_diagrams",
    "**/.*",
    "*chainrule.py*",
]
pythonPath = "C:/Users/lenovo/anaconda3/envs/minitorch/python.exe"
# venvPath = "."
# venv = ".venv"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportMissingTypeArgument = "none"
reportMissingTypeStubs = "none"
reportUnusedExpression = "none"
reportUnknownLambdaType = "none"
reportIncompatibleMethodOverride = "none"
reportPrivateUsage = "none"
reportMissingParameterType = "error"

[tool.pytest.ini_options]
markers = [
    "task0_0", "task0_1", "task0_2", "task0_3", "task0_4",
    "task1_0", "task1_1", "task1_2", "task1_3", "task1_4",
    "task2_0", "task2_1", "task2_2", "task2_3", "task2_4",
    "task3_0", "task3_1", "task3_2", "task3_3", "task3_4",
    "task4_0", "task4_1", "task4_2", "task4_3", "task4_4",
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "**/docs/slides/*",
    "old,build",
    "dist",
    "**/project/**/*",
    "**/mt_diagrams/*",
    "**/minitorch/testing.py",
    "**/docs/**/*",
    "*.ipynb",
]

[tool.ruff.lint]
ignore = [
    "ANN401", "N801", "E203", "E266", "E501", "E741",
    "N803", "N802", "N806", "D400", "D401", "D105",
    "D415", "D402", "D205", "D100", "D101", "D107",
    "D213", "ANN204", "D203"
]
select = ["D", "E", "F", "N", "ANN"]
fixable = [
    "A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W",
    "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT",
    "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH",
    "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT",
]
unfixable = []

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
